# tools

./: .gitignore  .mise.toml  .release-please-manifest.json  CLAUDE.md  CRATES.md  Cargo.toml  README.md  deny.toml  install.sh  justfile  prek.toml  release-please-config.json  rustfmt.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: cli-common-maximal-sharing-REQUIREMENTS.md  cli-common-maximal-sharing-ROADMAP.md  cli-common-unification-REQUIREMENTS.md  cli-common-unification-ROADMAP.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-sandbox-isolation/: 01-01-PLAN.md  01-CONTEXT.md
.planning/milestones/v1.0-phases/02-maximize-cli-common-sharing/: 02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  (+3 more)
.planning/phases/01-sandbox-isolation/: 01-01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-maximize-cli-common-sharing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-VALIDATION.md
.planning/phases/02-yolo-injection/: 02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-extract-remaining-cli-glue-into-cli-common-metadata-mapping-fatal-runners-response-emitters-and-doctor-scaffolding/: 03-02-PLAN.md  03-02-SUMMARY.md  03-04-SUMMARY.md  03-RESEARCH.md  03-UAT.md
.planning/phases/03-extraction-engine/: 03-01-PLAN.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-cli-surface/: 04-01-SUMMARY.md  04-02-PLAN.md  04-CONTEXT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-query-subcommand/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/07-add-shared-agent-help-and-agent-skill-support-across-cli-crates/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/07-workspace-agent-mode-in-cli-common-token-gated-restricted-capability-surface-inspectable-agent-help-and-shared-agent-skill-support-across-tools/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-UAT.md  07-VALIDATION.md
crates/asana-cli/: CHANGELOG.md  Cargo.toml
crates/asana-cli/src/: doctor.rs  main.rs
crates/asana-cli/src/api/: client.rs  projects.rs
crates/asana-cli/src/cli/: custom_field.rs  mod.rs  project.rs  tag.rs  task.rs  user.rs
crates/asana-cli/src/models/: custom_field.rs  project.rs  task.rs
crates/asana-cli/src/output/: mod.rs  project.rs  task.rs
crates/asana-cli/tests/: agent_help.rs  agent_surface.rs  cli.rs
crates/bsky-comment-extractor/: CHANGELOG.md  Cargo.toml
crates/bsky-comment-extractor/src/: cli.rs  client.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
crates/bsky-comment-extractor/tests/: agent_help.rs  agent_surface.rs  query_cli.rs
crates/chronicle/: Cargo.toml
crates/chronicle/src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  repo.rs  strip.rs
crates/chronicle/src/commands/: export.rs  ingest.rs  mod.rs  reindex.rs  search.rs  sources.rs  stats.rs
crates/chronicle/src/parsers/: claude_code.rs  codex.rs  mod.rs
crates/cli-common/: CHANGELOG.md  Cargo.toml
crates/cli-common/src/: agent.rs  agent_docs.rs  app.rs  command.rs  completions.rs  doctor.rs  error.rs  json.rs  lib.rs  output.rs  progress.rs  runner.rs  update.rs
crates/gator/: CHANGELOG.md  Cargo.toml
crates/gator/src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  prompt.rs  sandbox.rs  session.rs  worktree.rs
crates/gator/tests/: agent_help.rs  agent_surface.rs
crates/prompter/: CHANGELOG.md  Cargo.toml
crates/prompter/src/: completions.rs  doctor.rs  lib.rs  main.rs
crates/prompter/tests/: agent_help.rs  agent_surface.rs  cli.rs
crates/silent-critic/: CHANGELOG.md  Cargo.toml
crates/silent-critic/src/: cli.rs  config.rs  db.rs  discovery.rs  lib.rs  main.rs  models.rs  output.rs  project.rs
crates/silent-critic/src/commands/: contract.rs  criterion.rs  decide.rs  log.rs  mod.rs  project.rs  session.rs
crates/silent-critic/tests/: agent_help.rs  agent_surface.rs
crates/todoer/: CHANGELOG.md  Cargo.toml
crates/todoer/schema/: todoer-output.schema.json
crates/todoer/src/: cli.rs  db.rs  main.rs  models.rs  output.rs  project.rs  repo.rs
crates/todoer/src/commands/: init.rs  list.rs  mod.rs  new.rs  task.rs
crates/todoer/tests/: agent_help.rs  agent_surface.rs  cli_parse.rs  commands_init.rs  commands_list.rs  commands_new.rs  commands_task.rs  config_resolution.rs  db_schema.rs  json_output.rs  models.rs  output_table.rs  project_discovery.rs  project_resolution.rs  repo.rs
crates/unvenv/: CHANGELOG.md  Cargo.toml
crates/unvenv/src/: main.rs
crates/unvenv/tests/: agent_help.rs  agent_surface.rs  integration_test.rs
docs/: outline.md  the-silent-critic-argument-memo.md  the-silent-critic-system-spec.md  the_silent_critic.md  the_silent_critic_formal_appendix.md  the_silent_critic_polemic_revised.md  the_silent_critic_tooling_design.md
docs/plans/: 2026-03-16-gator-agent-harness.md  2026-03-16-gator-policy-and-session-impl.md  2026-03-16-gator-policy-profiles-and-session-integration.md  2026-03-16-silent-critic-skills-design.md  2026-03-16-silent-critic-skills-impl.md  2026-03-26-chronicle-design.md
scripts/: new-crate.sh  test-cli-metadata-consistency.sh
tests/cli/: 01-metadata-commands.sh  02-json-contracts.sh  03-primary-flows.sh  04-prompter-doctor.sh  05-shared-boilerplate.sh  06-agent-mode.sh  07-release-config.sh  lib.sh
(+19 files in other folders)
