[workspace]
resolver = "3"
members = [
    "crates/cli-common",
    "crates/prompter",
    "crates/unvenv",
    "crates/asana-cli",
    "crates/todoer",
    "crates/silent-critic",
    "crates/gator",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/tftio-stuff/tools"
rust-version = "1.94.0"

[workspace.dependencies]
# Internal
tftio-cli-common = { path = "crates/cli-common", version = "0.5.0" }
tftio-prompter = { path = "crates/prompter", version = "2.1.0" }

# External - centralized versions
anyhow = "1"
async-stream = "0.3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
csv = "1"
dateparser = "0.2"
dialoguer = { version = "0.12", default-features = false, features = ["editor", "fuzzy-select"] }
directories = "6"
dirs = "6"
futures-core = "0.3"
futures-util = "0.3"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
indicatif = "0.18"
is-terminal = "0.4"
mockito = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rpassword = "7"
rusqlite = { version = "0.38", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serial_test = "3"
sha2 = "0.10"
tabled = "0.20"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
enum_glob_use = "deny"
wildcard_imports = "deny"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# Pre-existing across crates; fix incrementally
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
collapsible_if = "allow"
use_self = "allow"
branches_sharing_code = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
uninlined_format_args = "allow"
bool_to_int_with_if = "allow"
