[package]
name = "tftio-asana-cli"
version = "1.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "An interface to the Asana API"
keywords = ["cli", "asana", "api"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[lib]
name = "asana_cli"
path = "src/lib.rs"

[[bin]]
name = "asana-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
csv.workspace = true
dateparser.workspace = true
dialoguer.workspace = true
directories.workspace = true
futures-core.workspace = true
futures-util.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["multipart", "stream"] }
rpassword.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "signal", "time"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tftio-cli-common.workspace = true

[dev-dependencies]
futures-util.workspace = true
mockito.workspace = true
serial_test.workspace = true
tempfile.workspace = true
