[package]
name = "tftio-bsky-comment-extractor"
version = "2.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Extract BlueSky post history to SQLite"

[lints]
workspace = true

[[bin]]
name = "bce"
path = "src/main.rs"

[lib]
name = "bsky_comment_extractor"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
clap.workspace = true
dateparser.workspace = true
directories.workspace = true
indicatif.workspace = true
is-terminal.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tftio-cli-common.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
