[package]
name = "tftio-chronicle"
version = "2.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Index and search interaction histories from coding agents (Codex, Claude Code)."

[lints]
workspace = true

[lib]
name = "chronicle"
path = "src/lib.rs"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3 = "1"
chrono = { workspace = true, features = ["serde", "clock"] }
clap.workspace = true
clap_complete.workspace = true
dirs.workspace = true
regex.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tftio-cli-common.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
