[package]
name = "tftio-gator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent sandbox harness -- wraps coding agents with macOS sandbox and prompter integration"
keywords = ["cli", "sandbox", "agent", "macos", "security"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[lib]
name = "gator"
path = "src/lib.rs"

[[bin]]
name = "gator"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
git2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tftio-cli-common.workspace = true
tftio-prompter.workspace = true

[dev-dependencies]
tempfile.workspace = true
